--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container" >
 
         <div class="section">
             <h1>Primeiro, seu prato</h1>
             <div class="menu">
                 <div class="options">
 
-                    <div class="option">
+                    <div class="option" onclick="selecionarPrato(this)">
                         <div class="option-container">
                             <img src="images/frango_yin_yang 1.png" />
                             <h1>Frango Yin Yang</h1>
@@ -38,7 +38,7 @@
                             <h3>R$ 14,90</h3>
                         </div>
                     </div>
-                    <div class="option">
+                    <div class="option" onclick="selecionarPrato(this)">
                         <div class="option-container">
                             <img src="images/frango_yin_yang 1.png" />
                             <h1>Frango Yin Yang</h1>
@@ -46,7 +46,7 @@
                             <h3>R$ 14,90</h3>
                         </div>
                     </div>
-                    <div class="option">
+                    <div class="option" onclick="selecionarPrato(this)"v>
                         <div class="option-container">
                             <img src="images/frango_yin_yang 1.png" />
                             <h1>Frango Yin Yang</h1>
@@ -62,9 +62,9 @@
         <div class="section">
             <h1>Agora, sua bebida</h1>
             <div class="menu">
-                <div class="options">
+                <div class="options bebidas">
 
-                    <div class="option">
+                    <div class="option" onclick="selecionarBebida(this)">
                         <div class="option-container">
                             <img src="images/coquinha_gelada 1.png" />
                             <h1>Coquinha gelada</h1>
@@ -72,7 +72,7 @@
                             <h3>R$ 4,90</h3>
                         </div>
                     </div>
-                    <div class="option">
+                    <div class="option" onclick="selecionarBebida(this)">
                         <div class="option-container">
                             <img src="images/coquinha_gelada 1.png" />
                             <h1>Coquinha gelada</h1>
@@ -80,7 +80,7 @@
                             <h3>R$ 4,90</h3>
                         </div>
                     </div>
-                    <div class="option">
+                    <div class="option" onclick="selecionarBebida(this)">
                         <div class="option-container">
                             <img src="images/coquinha_gelada 1.png" />
                             <h1>Coquinha gelada</h1>
@@ -96,9 +96,9 @@
         <div class="section">
             <h1>Por fim, sua sobremesa</h1>
             <div class="menu">
-                <div class="options">
+                <div class="options sobremesas">
 
-                    <div class="option">
+                    <div class="option sobremesa" onclick="selecionarSobremesa(this)">
                         <div class="option-container">
                             <img src="images/pudim 1.png" />
                             <h1>Pudim</h1>
@@ -106,7 +106,7 @@
                             <h3>R$ 7,90</h3>
                         </div>
                     </div>
-                    <div class="option">
+                    <div class="option sobremesa" onclick="selecionarSobremesa(this)">
                         <div class="option-container">
                             <img src="images/pudim 1.png" />
                             <h1>Pudim</h1>
@@ -114,7 +114,7 @@
                             <h3>R$ 7,90</h3>
                         </div>
                     </div>
-                    <div class="option">
+                    <div class="option sobremesa" onclick="selecionarSobremesa(this)">
                         <div class="option-container">
                             <img src="images/pudim 1.png" />
                             <h1>Pudim</h1>
@@ -134,9 +134,9 @@
 
 
     <div class="base">
-        <div class="button">
+        <div class="button" onclick="finalizarPedido()" >
             <h1>Selecione os 3 itens</h1>
-            <h1>para fechar o pedido</h1>
+            <h1>pasra fechar o pedido</h1>
         </div>
     </div>
 
